src/_common/styles/Page.css
/* ... */
.hero__right .hero__contact .social__item:last-child {
  margin-right: 0;
}

.hero__right .hero__contact .social__link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 43px;
  height: 43px;
  text-align: center;
  font-size: 20px;
  border-radius: 14px;
  border: 1px solid var(--border-color);
  color: var(--white);
  background: var(--background-color);
  transition: all .25s;
}

.hero__right .hero__contact .social__link i {
  line-height: 49px;
}

.hero__right .hero__contact .social__link:hover {
  transform: translate3d(3px, -3px, 0);
  box-shadow: -3px 3px 0 var(--white);
}

@media only screen and (max-width: 1024px) {
  .hero__right .hero__contact .social__link {
    width: 40px;
    height: 40px;
    font-size: 18px;
  }
}

.contact-head {
  margin-bottom: 32px;
}

.form__group {
  margin-bottom: 20px;
}

.form__group:last-child {
  margin-bottom: 0;
}

.form__input {
  width: 100%;
  padding: 20px;
  font-size: 14px;
  font-weight: 500;
  border: 1.5px solid var(--border-color);
  border-radius: 2px;
  outline: none;
  transition: .25s ease-in-out;
  resize: vertical;
  color: var(--heading-font-color);
  background-color: var(--background-color);
}

.form__input::placeholder {
  color: var(--text-color);
}

.form__input:focus {
  border-color: var(--heading-font-color);
}

.article {
  margin-bottom: 20px;
}

@media only screen and (max-width: 576px) {
  .article {
    margin-bottom: 48px;
  }
}

.article__title {
  margin-bottom: 32px;
  font-size: 48px;
  line-height: 1.15em;
  letter-spacing: -1px;
}

.article__title svg {
  display: inline;
  stroke-width: 5px;
  vertical-align: initial;
  position: absolute;
  margin-top: 15px;
  margin-left: 5px;
}

.article__title:hover {
  color: var(--heading-font-color);
}

.page-home .article__content {
  border-bottom: 1px solid var(--border);
}

.article__title:hover svg {
  opacity: 1;
  transform: translateX(3px);
}

.article__title svg {
  opacity: 0;
  transition: 0.2s linear;
}

@media only screen and (max-width: 576px) {
  .article__title {
    margin-bottom: 24px;
    font-size: 32px;
  }

  .article__title a i {
    display: none;
  }
}

.article__meta {
  margin-bottom: 24px;
  font-size: 12px;
  line-height: 14px;
  font-weight: 700;
  letter-spacing: 2px;
  color: var(--heading-font-color);
}

@media only screen and (max-width: 576px) {
  .article__meta {
    margin-bottom: 20px;
  }
}

.article__excerpt {
  margin-bottom: 24px;
}

@media only screen and (max-width: 576px) {
  .article__excerpt {
    margin-bottom: 20px;
  }
}

.article-tags__box {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.article__tag {
  padding: 8px 16px;
  margin-right: 4px;
  margin-bottom: 4px;
  font-size: 11px;
  line-height: 13px;
  font-weight: 500;
  text-transform: uppercase;
  border: 2px solid var(--border-color);
  border-radius: 30px;
  color: var(--text-alt-color);
}

.article__tag:last-child {
  margin-right: 0;
}

.article__tag:hover {
  color: var(--text-color);
}

.post,.page {
  /*max-width: 1080px;*/
  margin: 0 auto;
  color: var(--text-color);
  display: flex;
  flex-flow: column;
}

.page-hero {
  height: calc(100vh + 76px);
  margin-top: -76px;
  position: relative;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  min-height: 90px;
  box-sizing: border-box;
  color: white;
}

.page-post .page-hero {
  height: 65vh;
  min-height: 180px;
}

.page-blog .page-hero,
.page-docs .page-hero  {
  height: 40vh;
  min-height: 180px;
}

.page-single .page-hero {
  height: unset;
  min-height: 90px;
}

.hero__bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-size: cover;
  background-position: top center;
  z-index: 1;
}

/* .post a.article, .page a.article {
  border: 1px solid var(--border-color);
  transition: all 0.2s;
  border-radius: 20px;
}

.post a.article:hover,.page a.article:hover {
  border-bottom-color: var(--foreground);
  border-bottom-width: 5px;
  border-left-color: var(--foreground);
  border-left-width: 5px;
} */

.post .button,.page .button {
  border: none;
  text-decoration: none;
}

.post .button:hover,.page .button:hover {
  color: var(--button-color);
}

.post-image,.page-image {
  position: relative;
  height: 590px;
  margin-bottom: 68px;
  border-radius: 2px;
  overflow: hidden;
}

.post-image img,.page-image img {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  object-fit: cover;
  user-select: none;
  background-color: var(--text-color);
}

@media only screen and (max-width: 1024px) {
  .post-image,.page-image {
    height: 460px;
    margin-bottom: 40px;
  }
}

@media only screen and (max-width: 768px) {
  .post-image,.page-image {
    height: 360px;
  }

  .page-hero {
    margin-top: -128px;
    min-height: calc(100vh + 126px);
  }

  .page-single .page-hero {
    height: unset;
    min-height: 128px;
  }

  .article__title svg {
    margin-top: 5px;
  }
}

@media only screen and (max-width: 576px) {
  .post-image,.page-image {
    margin-bottom: 32px;
    height: 280px;
  }
}

.post__info,.page__info {
  text-align: center;
  margin-bottom: 48px;
}

@media only screen and (max-width: 1024px) {
  .post__info,.page__info {
    margin-bottom: 40px;
  }
}

@media only screen and (max-width: 576px) {
  .post__info,.page__info {
    margin-bottom: 32px;
  }
}

.post__title,.page__title,.page-single .post-content h1,.page-docs main h1 {
  margin-bottom: 40px;
  font-size: 50px;
  line-height: 1.15em;
  letter-spacing: -1px;
}

@media only screen and (max-width: 1140px) {
  .post__title,.page__title,.page-single .post-content h1,.page-docs main h1 {
    font-size: 40px;
  }
}

@media only screen and (max-width: 1024px) {
  .post__title,.page__title,.page-single .post-content h1,.page-docs main h1 {
    font-size: 40px;
  }
}
/* ... */

